--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Fantasy NASCAR League — Standings</title>
+  <title>Fantasy NASCAR League — Standings test</title>
   <style>
     :root{
       --bg:#0b0e14;
